--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "@splidejs/svelte-splide": "^0.2.9"
+    "@splidejs/svelte-splide": "^0.2.9",
+    "svelte-inview": "^4.0.0"
   }
 }
